--- a/style.css
+++ b/style.css
@@ -11,3 +11,198 @@ header {
     justify-content: space-between;
     padding: 10px;
 }
+
+h1 {
+    font-weight: bold;
+    color: #0e4f16;
+    font-size:  60px;
+    text-align: center;
+    padding-top: 50px;
+    font-weight: bold;
+    font-family: Helvetica, sans-serif
+}
+
+h2 {
+    color: #24652c;
+}
+
+h4{
+    margin-bottom: 15px;
+}
+
+input[type="text"] {
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-right: 5px;
+    border: solid  #d5d2d2;
+    }
+
+button {
+    background-color: #0e4f16;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #00cc00;
+}
+
+ span a {
+    transition: color 0.2s ease 0s;
+    color: rgb(245, 245, 245);
+    border-bottom: 1px solid rgb(255, 152, 0);
+    font-weight: bold;
+}
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    width: 50%;
+    margin-bottom: 10px;
+}
+
+li {
+    list-style: none;
+    margin: 0.25rem 0.5rem;
+    font-size: 0.85rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    flex-flow: column nowrap;
+    position: relative;
+    background: rgb(32, 35, 41);
+    color: rgb(158, 158, 158);
+    padding: 3.5rem 0px;
+    min-height: calc(120px);
+    width: 100%;
+}
+
+.image-before-footer {
+    text-align: center;
+    margin-top: 50px;
+    }
+
+.image-before-footer img {
+max-width: 30%;
+height: 50%
+}
+
+.card-text p:nth-child(2n) {
+    margin-bottom: 1em;
+  }
+
+.logo img {
+    height: 60px;
+    width: 120px;
+    padding: 0px;
+}
+
+.card {
+    width: 600px;
+    height: 220px;
+    display: flex;
+    overflow: hidden;
+    background: rgb(255, 255, 255);
+    border-radius: 0.5rem;
+    margin: 0.75rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
+
+.card-text {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.separador {
+    border: 1px solid green;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+} 
+
+.search {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 200px;
+}
+
+.search input {
+    width: 40%;
+}
+
+#grey{
+    color: #878787;
+    font-weight: bold;
+}
+
+.estilo{
+    font-weight: bold;
+    margin-top: 100px;
+}
+
+.circle {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 5px;
+  }
+  
+  .green {
+    background-color: green;
+  }
+  
+  .gray {
+    background-color: gray;
+  }
+  
+  .red {
+    background-color: red;
+  }
+
+#pagination {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+#pagination button {
+    margin: 0 5px;
+    padding: 5px 10px;
+    background-color: #028200;
+    border: none;
+    cursor: pointer;
+}
+
+#pagination button:hover {
+    background-color: #01924e;
+}
+
+#pagination button.active {
+    background-color: #848484;
+    color: #fff;
+}
+
+#totalPages {
+    margin-top: 10px;
+    text-align: center;
+}
+
