--- a/style.css
+++ b/style.css
@@ -11,30 +11,41 @@ header {
     justify-content: space-between;
     padding: 10px;
 }
-
-h1 {
+p {
+    color: #acafac;
+    font-weight: bold;
+}
+  h1 {
     font-weight: bold;
     color: #0e4f16;
-    font-size:  60px;
+    font-size:  50px;
     text-align: center;
     padding-top: 50px;
     font-weight: bold;
     font-family: Helvetica, sans-serif
 }
+h1 {
+    transition: font-size 4s ease;
+  }
+  
+  h1:hover {
+    font-size: 90px;
+    color: #00cc00;
+  }
+    h2 {
+        color: #ffffff;
+    }
 
-h2 {
-    color: #24652c;
-}
-
-h4{
-    margin-bottom: 15px;
-}
+    h4{
+        color: #ffffff;
+        margin-bottom: 15px;
+    }
 
 input[type="text"] {
     padding: 10px;
     border: none;
     border-radius: 10px;
-    font-size: 16px;
+    font-size: 12px;
     margin-right: 5px;
     border: solid  #d5d2d2;
     }
@@ -44,19 +55,20 @@ button {
     color: #fff;
     padding: 10px 20px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     font-size: 16px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #00cc00;
+    background-color: #fff;
+    color: #0e4f16;
 }
 
-span a {
+ span a {
     transition: color 0.2s ease 0s;
     color: rgb(245, 245, 245);
-    border-bottom: 1px solid rgb(255, 152, 0);
+    border-bottom: 1px solid #00cc00;
     font-weight: bold;
 }
 
@@ -82,39 +94,47 @@ li {
     align-items: center;
     flex-flow: column nowrap;
     position: relative;
-    background: rgb(32, 35, 41);
-    color: rgb(158, 158, 158);
+    background: #1f2821;
+    color: #808180;
     padding: 3.5rem 0px;
     min-height: calc(120px);
     width: 100%;
 }
 
-.image-before-footer {
-text-align: center;
-margin-top: 50px;
-}
-
-.image-before-footer img {
-max-width: 30%;
-height: 50%
-}
-
 .card-text p:nth-child(2n) {
     margin-bottom: 1em;
+    color: #ffffff;
   }
 
-.logo img {
+  .logo img {
     height: 60px;
-    width: 120px;
-    padding: 0px;
+    width: 60px;
+    padding: 5px;
+    position: absolute;
+    opacity: 0;
+    animation-name: fade-in-out;
+    animation-duration: 2.5s;
+    animation-iteration-count: infinite;
 }
 
+
+@keyframes fade-in-out {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
 .card {
     width: 600px;
     height: 220px;
     display: flex;
     overflow: hidden;
-    background: rgb(255, 255, 255);
+    background: #354338;
     border-radius: 0.5rem;
     margin: 0.75rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
@@ -124,29 +144,40 @@ height: 50%
     display: flex;
     flex-direction: column;
     padding: 10px;
-}
-  
-.separador {
-    border: 1px solid green;
+  }
+
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Centralizar os cards horizontalmente */
+    align-items: center; /* Centralizar os cards verticalmente */
+    gap: 10px; /* Espaçamento entre os cards */
+    background-image: url(assets/FUNDO.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 2px; /* Adicionei um espaçamento interno para melhor visualização */
+    padding-bottom: 900px;
 }
 
 .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-} 
+  position: relative;
+}
+
+.card:hover {
+    background-color: #00cc00;
+}
 
 .search {
     display: flex;
     align-self: center;
     justify-content: center;
     margin-top: 50px;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 
 .search input {
     width: 40%;
-}
+  }
 
 #grey{
     color: #878787;
@@ -164,24 +195,25 @@ height: 50%
     border-radius: 50%;
     display: inline-block;
     margin-right: 5px;
-}
+  }
   
-.green {
+  .green {
     background-color: green;
-}
+  }
   
-.gray {
+  .gray {
     background-color: gray;
-}
+  }
   
-.red {
+  .red {
     background-color: red;
-}
+  }
 
 #pagination {
     display: flex;
     justify-content: center;
-    margin: 20px 0;
+    padding: 20px 0;
+    background-color: #1f2821;
 }
 
 #pagination button {
@@ -193,7 +225,7 @@ height: 50%
 }
 
 #pagination button:hover {
-    background-color: #01924e;
+    background-color: #00cc00;
 }
 
 #pagination button.active {
@@ -204,4 +236,148 @@ height: 50%
 #totalPages {
     margin-top: 10px;
     text-align: center;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    width: 30%;
+    animation-name: modal-open;
+    animation-duration: 1s;
+}
+
+@keyframes modal-open {
+    from {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+}
+
+.modal-content.fade-out {
+  animation: fade-out 0.3s ease;
+}
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  /* Estilo para a imagem do personagem */
+  .modal-content img {
+    border-radius: 50%;
+    max-width: 200px;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  
+  /* Estilo para o nome do personagem */
+  .modal-content h2 {
+    color: #2b2b2b;
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+  
+  /* Estilo para o status do personagem */
+  .modal-content h4 {
+    color: #555;
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  
+  /* Estilo para as últimas informações */
+  .modal-content p {
+    margin-bottom: 5px;
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 28px;
+    font-weight: bold;
+    color: #aaa;
+    cursor: pointer;
+  }
+  
+  .close:hover {
+    color: #000;
+  }
+
+  #scrollButton:hover {
+    background-color: green;
+    transform: scale(1.1);
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+  #scrollButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#scrollButton i {
+    bottom: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    font-size: 24px;
+}
+
+#scrollButton.show {
+    display: block;
+}
+
+#scrollButton:hover {
+    background-color: green;
+    transform: scale(1.1);
+    transition: background-color 0.3s, transform 0.3s;
 }
