--- a/style.css
+++ b/style.css
@@ -11,10 +11,16 @@ header {
     justify-content: space-between;
     padding: 10px;
 }
+
 p {
     color: #acafac;
     font-weight: bold;
 }
+
+a{
+    text-decoration: none;
+}
+
   h1 {
     font-weight: bold;
     color: #0e4f16;
@@ -22,15 +28,32 @@ p {
     text-align: center;
     padding-top: 50px;
     font-weight: bold;
-    font-family: Helvetica, sans-serif
+    font-family: Helvetica, sans-serif    
 }
+
+
 h1 {
     transition: font-size 4s ease;
   }
   
   h1:hover {
-    font-size: 90px;
-    color: #00cc00;
+    background-image: linear-gradient(
+      -225deg,
+      #0f5503 0%,
+      #0d840d 29%,
+      #00ff6b 67%,
+      #b3ff00 100%
+    );
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    font-size: 80px;
+
   }
     h2 {
         color: #ffffff;
@@ -68,7 +91,7 @@ button:hover {
  span a {
     transition: color 0.2s ease 0s;
     color: rgb(245, 245, 245);
-    border-bottom: 1px solid #00cc00;
+    border-bottom: 1px solid #028200;
     font-weight: bold;
 }
 
@@ -112,11 +135,48 @@ li {
     padding: 5px;
     position: absolute;
     opacity: 0;
-    animation-name: fade-in-out;
-    animation-duration: 2.5s;
+    animation-name: balance;
+    animation-duration: 2s;
     animation-iteration-count: infinite;
+
 }
 
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
+@keyframes balance {
+    0% {
+       transform-origin: center center;
+       transform: rotate(0);
+       opacity: 1;
+    }
+    25% {
+        transform-origin: center center;
+        transform: rotate(-100deg);
+        opacity: 1;
+ 
+    }
+    50% {
+        transform-origin: center center;
+        transform: rotate(0deg);
+        opacity: 1;
+ 
+    }
+    75% {
+       transform-origin: center center;
+       transform: rotate(100deg);
+       opacity: 1;
+    }
+    100% {
+        transform-origin: center center;
+        transform: rotate(0deg);
+        opacity: 1;
+ 
+    } 
+ }
 
 @keyframes fade-in-out {
     0% {
@@ -165,6 +225,7 @@ li {
 
 .card:hover {
     background-color: #00cc00;
+    box-shadow: 0 0 30px #00cc00;
 }
 
 .search {
@@ -226,6 +287,8 @@ li {
 
 #pagination button:hover {
     background-color: #00cc00;
+    box-shadow: 0 0 10px #00cc00;
+
 }
 
 #pagination button.active {
